--- a/angular_cc/app/index.html
+++ b/angular_cc/app/index.html
@@ -8,39 +8,44 @@
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body ng-app="app">
-
-<div class="container">
-    <h2 class="text-primary">
-        Please give me the strength<br>
-        请赐给我力量
-    </h2>
-    <pre>
-        Give me the strength lightly to bear my joys and sorrows.
-        Give me the strength to make my love fruitful in service.
-        Give me the strength never to disown the poor or bend my knees before insolent might.
-        Give me the strength to raise my mind high above daily trifles.
-        And give me the strength to surrender my strength to thy will with love.
-        请赐给我力量使我能轻闲地承受欢乐与忧伤。
-        请赐给我力量使我的爱在服务中得到果实。
-        请赐给我力量使我永不抛弃穷人也永不向淫威屈膝。
-        请赐给我力量使我的心灵超越于日常琐事之上。
-        再赐给我力量使我满怀爱意地把我的力量服从你意志的指挥。
-
-    </pre>
-
-    <div class="row">
-        <div class=".col-lg-12">
-            <div ng-view></div>
-        </div>
-    </div>
-</div>
-
+<!--注意加载顺序：angularjs>jquery>bootstrap-->
 <script src="lib/angular/angular.min.js"></script>
+<script src="lib/jquery/dist/jquery.min.js"></script>
 <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="lib/angular-route/angular-route.min.js"></script>
 <script src="lib/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 <script src="scripts/angular/app.js"></script>
 <script src="scripts/angular/controllers.js"></script>
+<span>
+    <div class="wrap">
+        <div class="header">
+          <div class="navbar navbar-inverse navbar-swapper">
+            <div class="navbar-inner">
+              <div class="container">
+                <img src="styles/images/logo.svg"/>
+                <img src="styles/images/title.png"/>
+                <ul class="menu nav pull-right">
+                  <li><a class="brand" href="/">首页</a></li>
+                  <li><a href="/login">登录</a></li>
+                  <li><a href="/register">注册</a></li>
+                  <li><a href="/logout">退出</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div id="content" class="content container" ng-view></div>
+        </div>
+    </div>
+
+    <div class="footer">
+        <div class="container">
+            <p>
+              version1.0
+            </p>
+        </div>
+    </div>
+</span>
+
 
 </body>
 </html>
